--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <package format="2" >
   <name>stella_ui_camera</name>
-  <version>1.11.0</version>
-  <description>The runtime_manager package</description>
-  <maintainer email="kondoh@axe-inc.co.jp">Masao KONDOH</maintainer>
+  <version>1.0.0</version>
+  <description>The stella_ui_camera package</description>
+  <maintainer email="lab@ntrex.co.kr">ntrex</maintainer>
   <license>Apache 2</license>
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
